--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "events": "^1.1.0",
+    "howler": "^1.1.29",
     "javascript-state-machine": "^2.3.5",
     "jshint": "^2.9.1",
     "jshint-loader": "^0.8.3",
     "node-libs-browser": "^1.0.0",
+    "q": "^1.4.1",
     "script-loader": "^0.6.1",
     "uuid": "^2.0.2",
     "webpack": "^1.12.15",
