babel cli installed

--- a/package.json
+++ b/package.json
@@ -25,5 +25,7 @@
     "webpack": "^1.12.15",
     "webpack-dev-server": "^1.14.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-cli": "^6.10.1"
+  }
 }
