--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jsx-loader": "^0.13.2",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.3.3",
+    "node-uuid": "^1.4.7",
     "postcss-loader": "^0.8.0",
     "raw-loader": "^0.5.1",
     "react-transform-catch-errors": "^1.0.2",
@@ -53,6 +54,7 @@
     "rimraf": "^2.4.3",
     "sass-loader": "^3.0.0",
     "script-loader": "^0.6.1",
+    "socket.io": "^1.4.6",
     "style-loader": "0.12.4",
     "webpack": "^1.12.15",
     "webpack-dev-middleware": "^1.5.1",
