--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Component Entity Pooling system",
   "scripts": {
     "start": "webpack-dev-server --inline",
-    "build": "cp index.html dist/index.html && cp -R assets dist/ && node node_modules/.bin/webpack"
+    "build": "mkdir -p dist && cp index.html dist/ && cp -R assets dist/ && node node_modules/.bin/webpack"
   },
   "main": "./js/main.js",
   "author": "",
